# lib/db/src/schema/products.ts
@@ -5,10 +5,13 @@ import { z } from "zod/v4";
 export const productsTable = pgTable("products", {
   id: serial("id").primaryKey(),
   name: text("name").notNull(),
+  nameAr: text("name_ar"),
   description: text("description").notNull(),
+  descriptionAr: text("description_ar"),
   price: numeric("price", { precision: 10, scale: 2 }).notNull(),
   stock: integer("stock").notNull().default(0),
   category: text("category").notNull(),
+  categoryAr: text("category_ar"),
   imageUrl: text("image_url"),
   createdAt: timestamp("created_at").defaultNow().notNull(),
 });
